force-app/main/default/objects/Screen_Progress__c/Screen_Progress__c.object-meta.xml
<CustomObject>
    <label>Screen Progress</label>
    <nameField>
        <label>Screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Progresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>