force-app/main/default/objects/Screen_Progress__c/fields/Get_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Get_Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Sign Off</label>
    <type>Checkbox</type>
</CustomField>