force-app/main/default/objects/Screen_Progress__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Screen</label>
    <referenceTo>Screen__c</referenceTo>
    <relationshipLabel>Screen Progresses</relationshipLabel>
    <relationshipName>Screen_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>