force-app/main/default/objects/Screen_Progress__c/fields/Screen_Order__c.field-meta.xml
<CustomField>
    <fullName>Screen_Order__c</fullName>
    <inlineHelpText>Order of displaying the screens</inlineHelpText>
    <label>Screen Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>