force-app/main/default/objects/Screen_Progress__c/fields/Show_Buttons__c.field-meta.xml
<CustomField>
    <fullName>Show_Buttons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Buttons</label>
    <type>Checkbox</type>
</CustomField>