force-app/main/default/objects/Screen_Progress__c/fields/Show_Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Show_Module_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Module Progress</label>
    <type>Checkbox</type>
</CustomField>