force-app/main/default/objects/Screen_Progress__c/fields/Show_Summary__c.field-meta.xml
<CustomField>
    <fullName>Show_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Summary</label>
    <type>Checkbox</type>
</CustomField>